added dockerhub trigger and updated container scripts

--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
-# deployment:
-#   dockerhub:
-#     branch: master
-#     commands:
-#       - $DOCKER_HUB_TRIGGER
+deployment:
+  dockerhub:
+    branch: master
+    commands:
+      - $DOCKER_HUB_TRIGGER
 
 machine:
   node:
