--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "gulp-nodemon": "^2.1.0",
     "gulp-util": "^3.0.7",
     "mocha": "^2.5.3",
-    "sinon": "^1.17.4"
+    "request": "^2.73.0",
+    "sinon": "^1.17.4",
+    "supertest": "^1.2.0"
   }
 }
