--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
+    "currency-formatter": "^1.0.8",
+    "dateformat": "^2.0.0",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.20",
